css user aangepast

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,5 +3,19 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body
 {
-background-color:#b0c4de;
+background-color:#DCDDD8;
+color: #475F77;
+text-align:center;
+}
+h1
+{
+color:#D74B4B;
+}
+table{
+border: 1px dotted #354B5E;
+margin:0px 430px;
+width: 500px;
+}
+th{
+color: #354B5E;
 }
