--- a/app/assets/stylesheets/microposts.css.scss
+++ b/app/assets/stylesheets/microposts.css.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Microposts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body
+{
+background-color:#DCDDD8;
+color: #475F77;
+text-align:center;
+}
+h1
+{
+color:#D74B4B;
+}
+table{
+border: 1px dotted #354B5E;
+margin:0px 430px;
+width: 500px;
+}
+th{
+color: #354B5E;
+}
